--- a/config.json
+++ b/config.json
@@ -2,13 +2,15 @@
     "inbounds": [
         {
             "port": 8888,
-            "protocol": "vmess",
+            "protocol": "vless",
             "settings": {
                 "clients": [
                     {
-                        "id": "c95ef1d4-f3ac-4586-96e9-234a37dda068"
+                        "id": "5b327cfc-ff20-4d90-abc1-516b1a7bde28",
+                        "level": 0
                     }
-                ]
+                ],
+                "decryption": "none"
             },
             "streamSettings": {
                 "network": "ws"
